[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "werkzeug",
    "sqlalchemy",
    "python-json-logger>=2.0.7",
    "pypdf2>=3.0.1",
    "python-magic>=0.4.27",
    "fpdf>=1.7.2",
    "requests>=2.32.3",
    "jinja2",
    "plotly",
    "python-dotenv",
    "pandas",
    "numpy",
    "flask-mail>=0.10.0",
    "pyjwt>=2.10.0",
]
